Mobile navbar visibility on dark theme fix
- Used dynamic colours to change and massively increase visibility on light/dark mode.

--- a/components/nav.css
+++ b/components/nav.css
@@ -145,6 +145,12 @@ html.light-theme .nav-links .btn--nav {
 	.nav-links.open {
 		right: 0; /* Move to visible position */
 		visibility: visible; /* Show when open */
+		background-color: var(--dark-icon);
+		color: var(--primary);
+		height: fit-content;
+		border-bottom-left-radius: 10px;
+		border-bottom-right-radius: 10px;
+		border: 1px solid var(--light-icon);
 	}
 
 	.nav-links li {
